--- a/Taylr/Base.lproj/Main.storyboard
+++ b/Taylr/Base.lproj/Main.storyboard
@@ -2280,7 +2280,7 @@
                                         <rect key="frame" x="154" y="36" width="261" height="197"/>
                                         <string key="text">Once you leave this conversation, videos that you have seen are automatically removed in order to save space on your device.
 
-While you are in the conversation though you can reply videos you just watched in case you missed something.</string>
+While you are in the conversation though you can replay videos you just watched in case you missed something.</string>
                                         <fontDescription key="fontDescription" name="Cabin-Regular" family="Cabin" pointSize="18"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
